# datathon-grupo-29

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.train  Makefile  README.md  docker-compose.yml  dvc.yaml  mlflow.db  mlruns.db  pyproject.toml
.github/workflows/: cd-staging.yml  cd.yml  ci-cd.yml  ci.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
configs/: agent_config.yaml  alerting_rules.yml  grafana_dashboards.yml  model_config.yaml  monitoring_config.yaml  prometheus.yml
configs/dashboards/: datathon_dashboard.json
data/golden_set/: golden_set.json
data/knowledge_base/: aapl_overview.md  airports_airlines_reference.md  flight_delay_overview.md  risk_management.md
data/raw/: airlines.csv.dvc  airports.csv.dvc
docs/: DATATHON.md  LGPD_PLAN.md  MODEL_CARD.md  OWASP_MAPPING.md  PROJECT_DOCUMENTATION.md  RED_TEAM_REPORT.md  SYSTEM_CARD.md  benchmark.md  insomnia.json
evaluation/: ab_test_prompts.py  llm_judge.py  ragas_eval.py
feature_store/: feature_store.py  feature_store.yaml
notebooks/: 01_eda.ipynb
scripts/: build_feature_store.py  feature_store_demo.py  generate_data_artifacts.py
src/agent/: __init__.py  rag_pipeline.py  react_agent.py  tools.py
src/features/: __init__.py  feature_engineering.py
src/models/: __init__.py  baseline.py  predictor.py  train.py
src/monitoring/: drift.py  metrics.py
src/security/: guardrails.py  pii_detection.py
src/serving/: Dockerfile  app.py  context.py  (+1 more)
tests/: conftest.py  test_agent.py  test_api.py  test_evaluation.py  test_features.py  test_guardrails.py  test_models.py  test_monitoring.py
(+11 files in other folders)
